--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 		<!DOCTYPE html>
-		<html>
+		<html lang="en">
 
 		<head>
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 
 			<title>Mahmoud Kassem - Portfolio </title>
-
-			<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
 			<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -39,8 +37,6 @@
 				</nav>
 			</header>
 			<a href="#">Default Link</a>
-			<button type="button">Default Button</button>
-			<button class="button_secondary">Secondary Button</button>
 
 			<div class="profile">
 				<!-- Add your Portrait image here -->
@@ -61,8 +57,8 @@
 					<img src="img/iconfinder_social_media_circled_network-06_1856389.svg" alt="twitter">
 					<!-- LinkedIn logo -->
 					<img src="img/iconfinder_1_Linkedin_unofficial_colored_svg_5296501.svg" alt="linkedin">
+					</div>
 				</footer>
-			</div>
 			<script src="js/tota11y.min.js"></script>
 		</body>
 		</html>
