--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 
 			<title>Mahmoud Kassem - Portfolio </title>
-
+            
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
 			<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 
@@ -45,7 +45,21 @@
 				<p>
 					My name is Mahmoud Kassem. I am a <span>web</span> developer from Berlin.
 				</p>
-				<a href="#">Check out some of my code</a>
+				<h1>Check out my Applications</h1>
+                <h2>myFlix-client Application</h2>
+					<p>
+						This single-page application allows users to create an account, 
+						obtain information about movies, and make a list of favorites. 
+						Users can access their profiles to update their personal data. Built using MERN stack. 
+						I was responsible for the backend design of this project using Node.js, Express, MongoDb, Mongoose, JavaScript, Heroku for hosting, and Postman for testing.
+					</p>
+					<a href="#">https://modyzone.github.io/myFlix-client/</a>
+					<img src="img/movies.PNG" width="200" height="300" />
+				<h2>POKÉDEX</h2>
+				<p>A small web app built with Javascript, HTML, CSS, jQuery, and Bootstrap framework. Users can search through a pokemon collection that is loading from an external API. Details can be displayed in a modal by clicking on a pokemon's name. 
+					The code has been formatted according to ESLint rules</p>
+					<a href="#">https://modyzone.github.io/simple-js-app/</a>
+					<img src="img/simple-js-app.PNG" width="200" height="200" />
 			</div>
 
 			<footer class="page-footer">
