--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
 					The code has been formatted according to ESLint rules</p>
 					<a href="#">https://modyzone.github.io/simple-js-app/</a>
 					<img src="img/simple-js-app.PNG" width="200" height="200" />
+				<h2>To-Do-List</h2>
+				<p>A basic todo-list app using JavaScript, HTML , and CSS. 
+				A user can add and delete todos, edit them and mark them as completed.</p>
+				<img src="img/To Do List App.PNG" width="200" height="200" />
+				<h2>Meet App</h2>
+				<p>This application uses the Google Calendar API to fetch upcoming events. 
+					Users can search for events by specifying the location and the number of events to be displayed. 
+					It is built with a serverless, progressive web application (PWA) with React using a test-driven development (TDD) technique. 
+					It uses Google OAuth2 for login, Amazon Lambda functions for hosting, and Enzyme for code testing.</p
+				<img src="img/Meet App.PNG" width="200" height="200" />
 			</div>
 
 			<footer class="page-footer">
