--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
 				<p>This application uses the Google Calendar API to fetch upcoming events. 
 					Users can search for events by specifying the location and the number of events to be displayed. 
 					It is built with a serverless, progressive web application (PWA) with React using a test-driven development (TDD) technique. 
-					It uses Google OAuth2 for login, Amazon Lambda functions for hosting, and Enzyme for code testing.</p
-				<img src="img/Meet App.PNG" width="200" height="200" />
+					It uses Google OAuth2 for login, Amazon Lambda functions for hosting, and Enzyme for code testing.</p>
+					<a href="#">https://modyzone.github.io/meet/</a>
+				<img src="img/Meet App.PNG" width="200" height="100" />
 			</div>
 
 			<footer class="page-footer">
