--- a/work.html
+++ b/work.html
@@ -52,7 +52,7 @@
 						Users can access their profiles to update their personal data. Built using MERN stack. 
 						I was responsible for the backend design of this project using Node.js, Express, MongoDb, Mongoose, JavaScript, Heroku for hosting, and Postman for testing.
 					</p>
-					<a href="#">https://modyzone.github.io/myFlix-client/</a>
+					<a href="https://modyzone.github.io/myFlix-client/">MyFlix-client</a>
 					<img src="img/movies.PNG" width="200" height="300" />
 			</div>
 			<div class="grid__item">
@@ -65,7 +65,7 @@
 					Users can search for events by specifying the location and the number of events to be displayed. 
 					It is built with a serverless, progressive web application (PWA) with React using a test-driven development (TDD) technique. 
 					It uses Google OAuth2 for login, Amazon Lambda functions for hosting, and Enzyme for code testing.</p>
-					<a href="#">https://modyzone.github.io/meet/</a>
+					<a href="https://modyzone.github.io/meet/">MeetApp</a> 
 				<img src="img/Meet App.PNG" width="200" height="100" />	
 			</div>
 			<div class="grid__item">
@@ -84,7 +84,7 @@
 				<p>A basic todo-list app using JavaScript, HTML , and CSS. 
 				A user can add and delete todos, edit them and mark them as completed.</p>
 				<img src="img/To Do List App.PNG" width="200" height="200" />
-				<a href="#">https://modyzone.github.io/to-do-list-app/</a>
+				<a href="https://modyzone.github.io/to-do-list-app/">To-Do-List</a>
 			</div>
 			<div class="grid__item">
 				<h2>Meduim Blog</h2>
@@ -101,7 +101,7 @@
 				<h2>POKÉDEX</h2>
 				<p>A small web app built with Javascript, HTML, CSS, jQuery, and Bootstrap framework. Users can search through a pokemon collection that is loading from an external API. Details can be displayed in a modal by clicking on a pokemon's name. 
 					The code has been formatted according to ESLint rules</p>
-					<a href="#">https://modyzone.github.io/simple-js-app/</a>
+					<a href="https://modyzone.github.io/simple-js-app/">simple-js-app</a>
 					<img src="img/simple-js-app.PNG" width="200" height="200" />
 			</div>
 		</div>
