--- a/work.html
+++ b/work.html
@@ -65,7 +65,8 @@
 					Users can search for events by specifying the location and the number of events to be displayed. 
 					It is built with a serverless, progressive web application (PWA) with React using a test-driven development (TDD) technique. 
 					It uses Google OAuth2 for login, Amazon Lambda functions for hosting, and Enzyme for code testing.</p>
-					<a href="https://modyzone.github.io/meet/">MeetApp</a> 
+					<a href="https://modyzone.github.io/meet/">MeetApp</a>
+					<a href="https://github.com/modyzone/meet/tree/main">GitHub</a>
 				<img src="img/Meet App.PNG" width="200" height="100" />	
 			</div>
 			<div class="grid__item">
