--- a/work.html
+++ b/work.html
@@ -75,7 +75,7 @@
       <p>Using Angular, build the client-side for an application called myFlix movies library based on its existing server-side code (REST API and database), 
         with supporting documentation.</p>
         <a href="https://modyzone.github.io/myFlix-Angular-client/movies/">myFlix-Movies</a>
-        <img src="img/MyFlix-client.png" width="100" height="100" />
+        <img src="img/angular-movies.PNG" width="100" height="100" />
         <a href="https://github.com/modyzone/myFlix-Angular-client/">GitHub</a>
         </div>
 			<div class="grid__item">
