--- a/about.html
+++ b/about.html
@@ -36,17 +36,58 @@
 			</header>
         <div>
 			<h1 id="about">About</h1>
-			<p>I am Mahmoud enrolled in the Intro Web-developing course</p>
+			<p>I am Mahmoud a Mechatronic Engineer and Successfully finished a Full Stack immersive Course</p>
+
 			<p>This page is about myself. This is what I enjoy doing:</p>
+
 			<ul class="list">
-				<li>Front-end development</li>
-				<li>Back-end development</li>
+				<li>Acro Yoga</li>
+
+				<li>Developing Projects for Back-End Data and Front-End Code of Web-Developing</li>
+
 				<li>Test driven development</li>
-				<li>Climbing</li>
+
+				<li>Meeting Events</li>
 			</ul>
 
 			<a href="files/cv.pdf" class="button" download>Download my CV</a>
 		</div>
+    <table>
+      <thead>
+        <tr>
+          <th>Skills</th>
+          <th>Years of Experience</th>
+          <th>Level of Expertise</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th>React</th>
+          <td>1</td>
+          <td>Beginner</td>
+        </tr>
+        <tr>
+          <th>Angular</th>
+          <td>1</td>
+          <td>Beginner</td>
+        </tr>
+        <tr>
+          <th>Javascript</th>
+          <td>1</td>
+          <td>Beginner</td>
+        </tr>
+        <tr>
+          <th>ReactNative</th>
+          <td>1</td>
+          <td>Beginner</td>
+        </tr>
+        <tr>
+          <th>Agile</th>
+          <td>1</td>
+          <td>Beginner</td>
+        </tr>
+      </tbody>
+    </table>
 		  <svg xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="505" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
             <polygon id="a" points=".06 231.917 .06 .929 688.717 .929 688.717 231.917" />
@@ -980,33 +1021,6 @@
             />
         </g>
     </svg>
-			<table>
-				<thead>
-					<tr>
-						<th>Skills</th>
-						<th>Years of Experience</th>
-						<th>Level of Expertise</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<th>HTML</th>
-						<td>3</td>
-						<td>Advanced</td>
-					</tr>
-					<tr>
-						<th>CSS</th>
-						<td>2</td>
-						<td>Intermediate</td>
-					</tr>
-					<tr>
-						<th>Javascript</th>
-						<td>1</td>
-						<td>Beginner</td>
-					</tr>
-				</tbody>
-			</table>
-
 			<script src="js/tota11y.min.js"></script>
 		</body>
 		</html>
