--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<img src="img/mahmoud-kassem.JPG" class="profile__portrait" alt="Mahmoud Kassem Portrait">
 				<h1>Hello World!</h1>
 				<p>
-					My name is Mahmoud Kassem. I am a <span>web</span> developer from Berlin.
+					My name is Mahmoud Kassem. I am a Mechatronic Engineer and a <span>Web</span> Developer from Berlin.
 				</p>
 			</div>
 
