--- a/work.html
+++ b/work.html
@@ -67,7 +67,7 @@
 					It uses Google OAuth2 for login, Amazon Lambda functions for hosting, and Enzyme for code testing.</p>
 					<a href="https://modyzone.github.io/meet/">MeetApp</a>
 
-					<img src="img/Meet App.PNG" width="300" height="100" />	
+					<img src="img/Meet App.PNG" width="200" height="100" />	
 
 					<a href="https://github.com/modyzone/meet/tree/main">GitHub</a>
 				
@@ -107,7 +107,7 @@
         <a href="https://modyzone.github.io/simple-js-app/">simple-js-app-Pokedox</a>
 				<p>A small web app built with Javascript, HTML, CSS, jQuery, and Bootstrap framework. Users can search through a pokemon collection that is loading from an external API. Details can be displayed in a modal by clicking on a pokemon's name. 
 					The code has been formatted according to ESLint rules</p>
-          <img src="img/simple-js-app.PNG" width="200" height="200" />
+          <img src="img/pokedex.PNG" width="300" height="200" />
 					
         </div>
 			<div class="grid__item">
