--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,9 @@
 				Köpenicker Str. 126<br>
 				10179 Berlin <br>
 				<br>
-				Tel <a href="+491234567">+49 1234567</a><br>
-				Skype <a href="mailto:office@careerfoundry.com">office@careerfoundry.com</a><br>
+				Tel <a href="+491630806991">+491630806991</a><br>
+				Skype <a href="mody.zone@outlook.com">mody.zone@outlook.com</a><br>
+        
 				Contact <a href="mailto:office@careerfoundry.com">Contact me</a>
 			</div>
 
