--- a/index.html
+++ b/index.html
@@ -41,22 +41,24 @@
 			<div class="profile">
 				<!-- Add your Portrait image here -->
 				<img src="img/mahmoud-kassem.JPG" class="profile__portrait" alt="Mahmoud Kassem Portrait">
-				<h1>Hello World!</h1>
+				<h1>Welcome to my Portfolio</h1>
 				<p>
-					My name is Mahmoud Kassem. I am a Mechatronic Engineer and a <span>Web</span> Developer from Berlin.
+					My name is Mahmoud Kassem. I am a Mechatronic Engineer and a <span>Web</span> Developer lives in Berlin.
 				</p>
 			</div>
+      <h2>I am a CareerFoundry BootCamp Post Graduate 2021-2022</h2>
+      <a href="https://careerfoundry.com/"><img src="img/67212083_2498422976845170_3182367193476104192_n.png" alt="CareerFoundry"></a>
 
 			<footer class="page-footer">
 				<p>Find me on</p>
 				<!-- Github logo -->
 				<div class="social-media">
-					<img src="img/iconfinder_github_317712.svg" alt="github">
-					<!-- Twitter logo -->
-					<img src="img/iconfinder_social_media_circled_network-06_1856389.svg" alt="twitter">
+					<a href="https://github.com/modyzone"><img src="img/iconfinder_github_317712.svg" alt="github"></a>
+					<!-- Facebook logo -->
+					<a href="https://www.facebook.com/"><img src="img/5296499_fb_facebook_facebook logo_icon.svg" alt="Facebook"></a>
 					<!-- LinkedIn logo -->
-					<img src="img/iconfinder_1_Linkedin_unofficial_colored_svg_5296501.svg" alt="linkedin">
-					</div>
+					<a href="https://www.linkedin.com/feed/"><img src="img/iconfinder_1_Linkedin_unofficial_colored_svg_5296501.svg" alt="linkedin"></a>
+        </div>
 				</footer>
 			<script src="js/tota11y.min.js"></script>
 		</body>
