--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<div class="profile">
 				<!-- Add your Portrait image here -->
 				<img src="img/mahmoud-kassem.JPG" class="profile__portrait" alt="Mahmoud Kassem Portrait">
-				<h1>Welcome to my Portfolio</h1>
+				<h1>Welcome to my Portfolio!</h1>
 				<p>
 					My name is Mahmoud Kassem. I am a Mechatronic Engineer and a <span>Web</span> Developer lives in Berlin.
 				</p>
@@ -50,7 +50,7 @@
       <a href="https://careerfoundry.com/"><img src="img/67212083_2498422976845170_3182367193476104192_n.png" alt="CareerFoundry"></a>
 
 			<footer class="page-footer">
-				<p>Find me on</p>
+				<p>Follow me on!</p>
 				<!-- Github logo -->
 				<div class="social-media">
 					<a href="https://github.com/modyzone"><img src="img/iconfinder_github_317712.svg" alt="github"></a>
