--- a/work.html
+++ b/work.html
@@ -106,6 +106,8 @@
           
           <img src="img/ChatApp.jpg" width="300" height="300" />
           </div>
+
+          <img src="img/ChatApp2.PNG" />
   
       <div class="grid__item">
 				<h2>Simple-js-app</h2>
