--- a/work.html
+++ b/work.html
@@ -119,7 +119,7 @@
 				<h2>POKÉDEX</h2>
         <a href="https://github.com/modyzone/simple-js-app/">GitHub</a>
 
-        <a href="https://modyzone.github.io/simple-js-app/">simple-js-app-Pokedox</a>
+        <a href="https://modyzone.github.io/Pokedex/">simple-js-app-Pokedox</a>
 				<p>A small web app built with Javascript, HTML, CSS, jQuery, and Bootstrap framework. Users can search through a pokemon collection that is loading from an external API. Details can be displayed in a modal by clicking on a pokemon's name. 
 					The code has been formatted according to ESLint rules</p>
           <img src="img/pokedex.PNG" width="400" height="200" />
