--- a/contact.html
+++ b/contact.html
@@ -41,14 +41,14 @@
 			<h1>Contact</h1>
 
 			<div>
-				CareerFoundry GmbH<br>
-				Köpenicker Str. 126<br>
-				10179 Berlin <br>
+				Mahmoud Kassem<br>
+				Ostpreußendamm 130<br>
+				12207 Berlin <br>
 				<br>
 				Tel <a href="+491630806991">+491630806991</a><br>
 				Skype <a href="mody.zone@outlook.com">mody.zone@outlook.com</a><br>
         
-				Contact <a href="mailto:office@careerfoundry.com">Contact me</a>
+				Contact <a href="mailto:mody.kassem@gmail.com">Contact me</a>
 			</div>
 
 			<form method="post" id="contact-form">
