--- a/index.html
+++ b/index.html
@@ -36,10 +36,17 @@
 				</ul>
 				</nav>
 			</header>
-			
-
+		
+      <img src="img/angular.png" width= "50" height="50" alt="angular">
+      <img src="img/jscsshtml.png" width= "50" height="50" alt="jscsshtml">
+      <img src="img/framework.jpg" width= "60" height="60" alt="framework">
+      <img src="img/sql.png" width= "50" height="50" alt="sql">
+      <img src="img/postman.png" width= "50" height="50" alt="postman">
+      <img src="img/react.png" width= "50" height="50" alt="react">
+      <img src="img/mongodb_thumbnail.png" width= "50" height="50" alt="mongodb">
 			<div class="profile">
 				<!-- Add your Portrait image here -->
+        
 				<img src="img/mahmoud-kassem.JPG" class="profile__portrait" alt="Mahmoud Kassem Portrait">
 				<h1>Welcome to my Portfolio!</h1>
 				<p>
@@ -47,7 +54,7 @@
 				</p>
 			</div>
       <h2>I am a CareerFoundry BootCamp Post Graduate 2021-2022</h2>
-      <a href="https://careerfoundry.com/"><img src="img/67212083_2498422976845170_3182367193476104192_n.png" alt="CareerFoundry"></a>
+      <a href="https://careerfoundry.com/"><img src="img/67212083_2498422976845170_3182367193476104192_n.png" width= "200" height= "200" alt="CareerFoundry"></a>
 
 			<footer class="page-footer">
 				<p>Follow me on!</p>
