--- a/about.html
+++ b/about.html
@@ -86,6 +86,21 @@
           <td>1</td>
           <td>Beginner</td>
         </tr>
+        <tr>
+          <th>SQL</th>
+          <td>1</td>
+          <td>Beginner</td>
+        </tr>
+        <tr>
+          <th>MongoDB</th>
+          <td>1</td>
+          <td>Beginner</td>
+        </tr>
+        <tr>
+          <th>HTML/CSS</th>
+          <td>1</td>
+          <td>Beginner</td>
+        </tr>
       </tbody>
     </table>
 		  <svg xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="505" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
