--- a/contact.html
+++ b/contact.html
@@ -45,10 +45,10 @@
 				Ostpreußendamm 130<br>
 				12207 Berlin <br>
 				<br>
-				Tel <a href="+491630806991">+491630806991</a><br>
-				Skype <a href="mody.zone@outlook.com">mody.zone@outlook.com</a><br>
+				Tel: <a href="+491630806991">+491630806991</a><br>
+				Skype: <a href="mody.zone@outlook.com">mody.zone@outlook.com</a><br>
         
-				Contact <a href="mailto:mody.kassem@gmail.com">Contact me</a>
+				Contact: <a href="mailto:mody.kassem@gmail.com">mody.kassem@gmail.com</a>
 			</div>
 
 			<form method="post" id="contact-form">
