--- a/about.html
+++ b/about.html
@@ -50,56 +50,61 @@
 				<li>Meeting Events</li>
 			</ul>
 
-			<a href="files/cv.pdf" class="button" download>Download my CV</a>
+			<a href="img/2021_CV Mahmoud Kassem.pdf" class="button" download>Download my CV</a>
 		</div>
     <table>
       <thead>
         <tr>
           <th>Skills</th>
-          <th>Years of Experience</th>
-          <th>Level of Expertise</th>
+          <th>Projects</th>
+          <th>Topic</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <th>React</th>
-          <td>1</td>
-          <td>Beginner</td>
+          <td>Myflix-client</td>
+          <td>MoivesLibrary-Profiles</td>
         </tr>
         <tr>
           <th>Angular</th>
-          <td>1</td>
-          <td>Beginner</td>
+          <td>myFlix-Angular-client</td>
+          <td>MoivesLibrary-FavoriteUsers</td>
         </tr>
         <tr>
           <th>Javascript</th>
-          <td>1</td>
-          <td>Beginner</td>
+          <td>Pokedex</td>
+          <td>Pokemon-ListDetails</td>
         </tr>
         <tr>
           <th>ReactNative</th>
-          <td>1</td>
-          <td>Beginner</td>
+          <td>Chat Application</td>
+          <td>Chat-Location-Camera-GallerySharing</td>
         </tr>
         <tr>
           <th>Agile</th>
-          <td>1</td>
-          <td>Beginner</td>
+          <td>SetupPlane-Schedule</td>
+          <td>TimeFrame-Goals-Missions</td>
         </tr>
         <tr>
           <th>SQL</th>
-          <td>1</td>
-          <td>Beginner</td>
+          <td>Backend-DataBase</td>
+          <td>Store-Backend-Data</td>
         </tr>
         <tr>
           <th>MongoDB</th>
-          <td>1</td>
-          <td>Beginner</td>
+          <td>NoSQL-DataBase</td>
+          <td>ServerStore-BackendDataBase</td>
         </tr>
         <tr>
           <th>HTML/CSS</th>
-          <td>1</td>
-          <td>Beginner</td>
+          <td>Welcome-Pages</td>
+          <td>Contact-Styles</td>
+        </tr>
+        <tr>
+          <th>Node.js</th>
+          <td>Backend-Framework</td>
+          <td>Backend-JS-Base</td>
         </tr>
       </tbody>
     </table>
