--- a/about.html
+++ b/about.html
@@ -36,18 +36,25 @@
 			</header>
         <div>
 			<h1 id="about">About</h1>
-			<p>I am Mahmoud a Mechatronic Engineer and Successfully finished a Full Stack immersive Course</p>
+			<p>Hii! I am Mody a Mechatronic Engineer and Successfully finished a Full Stack Web-Developing Course</p>
 
-			<p>This page is about myself. This is what I enjoy doing:</p>
+			<p>This page about my Soft Skills.</p>
+      <ul class="list">
+        <li>Work in Team</li>
+        <li>Continous Learning</li>
+        <li>Responsible</li>
+        <li>Patient and Passion</li>
+      </ul>
+        <p>This is what I enjoy doing:</p>
 
 			<ul class="list">
-				<li>Acro Yoga</li>
+				<li>Gymnastics</li>
 
-				<li>Developing Projects for Back-End Data and Front-End Code of Web-Developing</li>
+				<li>Langauge Learning</li>
 
-				<li>Test driven development</li>
+				<li>Cooking</li>
 
-				<li>Meeting Events</li>
+				<li>Multiculture Events</li>
 			</ul>
 
 			<a href="img/2021_CV Mahmoud Kassem.pdf" class="button" download>Download my CV</a>
