--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 				<li>Multiculture Events</li>
 			</ul>
 
-			<a href="img/2021_CV Mahmoud Kassem.pdf" class="button" download>Download my CV</a>
+			<a href="img/Mahmoud Kassem resume CF 2022.pdf" class="button" download>Download my Resume</a>
 		</div>
     <table>
       <thead>
