--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<div class="profile">
 				<!-- Add your Portrait image here -->
         
-				<img src="img/IMG_Best.jpg" class="profile__portrait" alt="Mahmoud Kassem Portrait">
+				<img src="img/IMG_20210626_123749.jpg" class="profile__portrait" alt="Mahmoud Kassem Portrait">
 				<h1>Welcome to my Portfolio!</h1>
 				<p>
 					My name is Mahmoud Kassem. I am a Mechatronic Engineer and a <span>Web</span> Developer lives in Berlin.
