--- a/about.html
+++ b/about.html
@@ -36,16 +36,16 @@
 			</header>
         <div>
 			<h1 id="about">About</h1>
-			<p>Hii! I am Mody a Mechatronic Engineer and Successfully finished a Full Stack Web-Developing Course</p>
-
-			<p>This page about my Soft Skills.</p>
+			<p>Hello! I am Mody a Full-Stack Web-Developer with Technical Background.</p>
+        <p>During my Technical field my Passion for Coding and Web creativity encourage me to update my career and finish my course in CareerFoundry.</p>
+      <h3>Soft Skills</h3>
       <ul class="list">
         <li>Work in Team</li>
         <li>Continous Learning</li>
-        <li>Responsible</li>
+        <li>Percise and Accuracy</li>
         <li>Patient and Passion</li>
       </ul>
-        <p>This is what I enjoy doing:</p>
+        <h3>Hobbies:</h3>
 
 			<ul class="list">
 				<li>Gymnastics</li>
@@ -54,10 +54,20 @@
 
 				<li>Cooking</li>
 
-				<li>Multiculture Events</li>
+				<li>Attend Multiculture Events</li>
 			</ul>
+      <h3>Background:</h3>
+      <p>I am a Mechatronic Engineer from Cairo-Egypt who lived and worked in Egypt, Italy and Germany with 10 years Technical background.</p>
+      <p>Along my career there was usual interaction with reporting bugs errors in Embedded System Codes, which gave me passion to go deeper.</p>
+      <p>Developing Code and fixing bugs gives me passion and desire to search the knowledge using my studies and my skills for fixing it.</p>
+      <h3>Goals and Expectations:</h3>
+      <ul class ="list">
+      <li>Work Full-Time/Part-Time or Freelancer as a FullStack Web-Developer</li>
+      <li>Join a Social-Media/Non-Profitable Envirnomental Friendly Company</li>
+      <li>Learn and grow in a Multiculture creative envirnoment</li>
+      </ul>
 
-			<a href="img/Mahmoud Kassem resume CF 2022.pdf" class="button" download>Download my Resume</a>
+			<a href="img/Mahmoud Kassem resume CF 2022.pdf" class="button" download>Download Resume</a>
 		</div>
     <table>
       <thead>
@@ -71,7 +81,7 @@
         <tr>
           <th>React</th>
           <td>Myflix-client</td>
-          <td>MoivesLibrary-Profiles</td>
+          <td>Moives Library-Register Users Profile-Add/Remove FavoriteMovies</td>
         </tr>
         <tr>
           <th>Angular</th>
@@ -79,24 +89,9 @@
           <td>MoivesLibrary-FavoriteUsers</td>
         </tr>
         <tr>
-          <th>Javascript</th>
-          <td>Pokedex</td>
-          <td>Pokemon-ListDetails</td>
-        </tr>
-        <tr>
           <th>ReactNative</th>
           <td>Chat Application</td>
-          <td>Chat-Location-Camera-GallerySharing</td>
-        </tr>
-        <tr>
-          <th>Agile</th>
-          <td>SetupPlane-Schedule</td>
-          <td>TimeFrame-Goals-Missions</td>
-        </tr>
-        <tr>
-          <th>SQL</th>
-          <td>Backend-DataBase</td>
-          <td>Store-Backend-Data</td>
+          <td>Chatting-Share Location-Camera Upload</td>
         </tr>
         <tr>
           <th>MongoDB</th>
