--- a/contact.html
+++ b/contact.html
@@ -37,13 +37,15 @@
 				</nav>
 			</header>
 
-
+       <div>
 			<h1>Contact</h1>
-
+       </div>
 			<div>
 				Mahmoud Kassem<br>
-				Ostpreußendamm 130<br>
-				12207 Berlin <br>
+				Cairo<br>
+				Egypt<br>
+			  Berlin <br>
+				Germany <br>
 				<br>
 				Tel: <a href="+491630806991">+491630806991</a><br>
 				Skype: <a href="mody.zone@outlook.com">mody.zone@outlook.com</a><br>
