--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<img src="img/IMG_20210626_123749.jpg" class="profile__portrait" alt="Mahmoud Kassem Portrait">
 				<h1>Welcome to my Portfolio!</h1>
 				<p>
-					My name is Mahmoud Kassem. I am a Mechatronic Engineer and a <span>Web</span> Developer lives in Berlin.
+					I am Mody!. a passionate <span>Web</span> Developer based in Berlin.
 				</p>
 			</div>
       <h2>I am a CareerFoundry BootCamp Post Graduate 2021-2022</h2>
