--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
         
 				<img src="img/IMG_20210626_123749.jpg" class="profile__portrait" alt="Mahmoud Kassem Portrait">
 				<h1>Welcome to my Portfolio!</h1>
-				<p>
-					I am Mody!. a passionate <span>Web</span> Developer based in Berlin.
-				</p>
+				<p>I am Mody!a passionate Web-Developer based in Berlin.</p>
 			</div>
       <h2>I am a CareerFoundry BootCamp Post Graduate 2021-2022</h2>
       <a href="https://careerfoundry.com/"><img src="img/67212083_2498422976845170_3182367193476104192_n.png" width= "200" height= "200" alt="CareerFoundry"></a>
