--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
       <img src="img/framework.jpg" width= "60" height="60" alt="framework">
       <img src="img/sql.png" width= "50" height="50" alt="sql">
       <img src="img/postman.png" width= "50" height="50" alt="postman">
-      <img src="img/react.png" width= "50" height="50" alt="react">
+      <img src="img/logo-react-icon1.png" width= "50" height="50" alt="react">
       <img src="img/mongodb_thumbnail.png" width= "50" height="50" alt="mongodb">
 			<div class="profile">
 				<!-- Add your Portrait image here -->
         
-				<img src="img/IMG_20210626_123749.jpg" class="profile__portrait" alt="Mahmoud Kassem Portrait">
+				<img src="img/mody.jpg" class="profile__portrait" alt="Mahmoud Kassem Portrait">
 				<h1>Welcome to my Portfolio!</h1>
-				<p>I am Mody!a passionate Web-Developer based in Berlin.</p>
+				<p>I am Mody!a passionate Web-Developer based in Berlin I am a CareerFoundry postgraduate with technical & customer-service background.I learnt front and back-end technologies.I have a Bachelor in Mechatronic Engineering & a Full-Stack Web development Diplome.</p>
 			</div>
-      <h2>I am a CareerFoundry BootCamp Post Graduate 2021-2022</h2>
-      <a href="https://careerfoundry.com/"><img src="img/67212083_2498422976845170_3182367193476104192_n.png" width= "200" height= "200" alt="CareerFoundry"></a>
-
+      <a href="https://careerfoundry.com/"><img src="img/cf.png" class="cf" width= "80" height= "80" alt="CareerFoundry"></a>
+      <img src="img/web.webp" class="web" width= "80" height= "80" alt="Web">
+			<img src="img/mechatronic.jpg" class="mecha" width= "80" height= "80" alt="Web">
 			<footer class="page-footer">
 				<p>Follow me on!</p>
 				<!-- Github logo -->
