--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body class="body">
+<body>
   <header class="page-header">
     <!-- Add your logo here-->
     <img src="img/logo.PNG" alt="logo" class="page-header__item">
