--- a/contact.html
+++ b/contact.html
@@ -1,41 +1,45 @@
-		<!DOCTYPE html>
-		<html lang="en">
-		<head>
-			<meta charset="utf-8">
-			<meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html lang="en">
 
-			<title>Mahmoud Kassem - Portfolio </title>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Mahmoud Kassem - Portfolio </title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+		integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+		crossorigin="anonymous" />
+	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/style.production.css">
+	<link rel="stylesheet" type="text/css" href="css/new.css">
+</head>
 
+<body>
+	<div class="wr">
 
-			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
-			<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-
-			
-			<link rel="stylesheet" type="text/css" href="css/style.production.css">
-
-		</head>
-
-		<body>
-			<header>
-				<!-- Add your logo here-->
-				<img src="img/logo.PNG" alt="logo" class="page-header__item">
-				<nav class="main-navigation page-header__item">
-					<ul role="menubar" class="navigation-list">
-						<li role="presentation">
-							<a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a>
-						</li>
-						<li role="presentation">
-							<a href="about.html" role="menuitem" class="navigation-list__item">About</a>
-						</li>
-						<li role="presentation">
-							<a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
-						</li>
-						<li role="presentation">
-							<a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
-						</li>
-					</ul>
-				</nav>
-			</header>
+		<header class="page-header">
+			<!-- Add your logo here-->
+			<!-- <img src="img/logo.PNG" alt="logo" class="page-header__item"> -->
+			<div class="logo">
+				<p>Mahmoud Kassem</p>
+			</div>
+			<nav class="main-navigation page-header__item">
+				<ul role="menubar" class="navigation-list">
+					<li role="presentation">
+						<a href="index.html" role="menuitem"
+							class="navigation-list__item navigation-list__item">Home</a>
+					</li>
+					<li role="presentation">
+						<a href="about.html" role="menuitem" class="navigation-list__item">About</a>
+					</li>
+					<li role="presentation">
+						<a href="contact.html" role="menuitem" class="navigation-list__item--active">Contact</a>
+					</li>
+					<li role="presentation">
+						<a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
+					</li>
+				</ul>
+			</nav>
+		</header>
 
        <div>
 			<h1>Contact</h1>
