--- a/about.html
+++ b/about.html
@@ -47,18 +47,18 @@
 
     <div class="aboutContent">
       <div class="left">
-        <p>Hello! I am Mody a Full-Stack Web-Developer with Technical Background.</p>
-        <p>During my Technical field my Passion for Coding</p>
-        <p>and Web creativity encourage me to update my career</p>
-        <p> and finish my course in CareerFoundry.</p>
+         <p>During my Technical field my Passion for Coding
+          and Web creativity</p> <p>encouraged me to update my career
+          and finish my course in CareerFoundry.
+        </p>
         <p>Background:</p>
         <p>I am a Mechatronic Engineer from Cairo-Egypt who lived and worked in Egypt,</p>
-        <p> Italy and Germany with 10 years Technical background.</p>
-        <p>Along my career there was usual interaction</p>
-        <p>with reporting bugs errors in Embedded System Codes,</p>
-        <p> which gave me passion to go deeper.</p>
-        <p>Developing Code and fixing bugs gives me passion and desire to search</p>
-        <p> the knowledge using my studies and my skills for fixing it.</p>
+         <p>Italy and Germany with 10 years Technical background.</p>
+        <p>Along my career there was usual interaction
+        with reporting bugs errors in Embedded System Codes,
+        which gave me passion to go deeper.</p>
+        <p>Developing Code and fixing bugs gives me passion and desire to search
+        the knowledge using my studies and my skills for fixing it.</p>
 
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
           <defs>
@@ -1033,18 +1033,18 @@
           <p>Berlin
             Is the World big Valley and the central location for the Web-developing it was my inspiration to think about
             the
-            Web-developing.
-            Majority of my community are somehow related to this field which motivated me to join this interested
+            Web-developing.</p>
+            <p>Majority of my community are somehow related to this field which motivated me to join this interested
             network
             and start to shift my career.</p>
           <p>Soft Skills:</p>
           <p>Work in Team Continous Learning Percise and Accuracy Patient and Passion</p>
           <p>Hobbies:</p>
-          <p>Gymnastics Langauge Learning Cooking Attend Multiculture Events</p>
+          <p>Gymnastics Language Learning Cooking Attend Multiculture Events</p>
           <p>Goals and Expectations:</p>
-          <p>Work Full-Time/Part-Time or Freelancer as a FullStack Web-Developer
-            Join a Social-Media/Non-Profitable Envirnomental Friendly Company
-            Learn and grow in a Multiculture creative envirnoment</p>
+          <p>Work Full-Time/Part-Time or Freelancer as a FullStack Web-Developer</p>
+            <p>Join a Social-Media/Non-Profitable Friendly Envirnomental Company</p>
+            Learn and grow in a Multiculture creative envirnoment.</p>
         </div>
       </div>
 
@@ -1065,12 +1065,12 @@
         <tr>
           <th>React</th>
           <td>Myflix-client</td>
-          <td>Moives Library-RegisterUsers Add/Remove FavoriteMovies</td>
+          <td>Movies Library-RegisterUsers Add/Remove FavoriteMovies</td>
         </tr>
         <tr>
           <th>Angular</th>
           <td>myFlix-Angular-client</td>
-          <td>MoivesLibrary-FavoriteUsers</td>
+          <td>MoviesLibrary-FavoriteUsers</td>
         </tr>
         <tr>
           <th>ReactNative</th>
