--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 			</div>
 			<div class="info">
 				<h1>Welcome to my Portfolio!</h1>
-				<p>I am Mody!a passionate Web-Developer based in Berlin I am a CareerFoundry postgraduate with technical
+				<p>I am Mody!A passionate Web-Developer based in Berlin I am a CareerFoundry postgraduate with Technical
 					&
-					customer-service background.I learnt front and back-end technologies.I have a Bachelor in
+					customer-service background.I learnt front and back-end Technologies.I have a Bachelor in
 					Mechatronic
-					Engineering & a Full-Stack Web development Diplome.</p>
+					Engineering & A Full-Stack Web development Diplome.</p>
 				<div class="logos">
 					<a href="https://careerfoundry.com/">
 						<img src="img/cf.png" class="cf" width="80" height="80" alt="CareerFoundry">
