--- a/contact.html
+++ b/contact.html
@@ -46,27 +46,11 @@
        </div>
 			<div>
 				Mahmoud Kassem<br>
-				Cairo<br>
-				Egypt<br>
-			  Berlin <br>
-				Germany <br>
+			  Berlin, Germany <br>
 				<br>
 				Tel: <a href="+491630806991">+491630806991</a><br>
-				Skype: <a href="mody.zone@outlook.com">mody.zone@outlook.com</a><br>
+				Email: <a href="mailto:mody.kassem@gmail.com">mody.kassem@gmail.com</a><br>
 			</div>
 
-			<form method="post" id="contact-form">
-				<label class="standard-label" for="contact-email">E-mail: </label>
-				<input type="email" id="contact-email" required="required">
-
-				<label class="standard-label">Telephone: </label>
-				<input type="tel" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
-
-				<label class="standard-label">Message: </label>
-				<textarea maxlength="240" required="required"></textarea>
-				<input type="submit" value="Send message">
-
-			</form>
-			<script src="js/tota11y.min.js"></script>
 		</body>
 		</html>
