--- a/index.html
+++ b/index.html
@@ -92,12 +92,13 @@
 			<p>Follow me on!</p>
 			<!-- Github logo -->
 			<div class="social-media">
-				<a href="https://github.com/modyzone"><img src="img/iconfinder_github_317712.svg" alt="github"></a>
+				<a href="https://github.com/modyzone" target="blank" /><img src="img/iconfinder_github_317712.svg" alt="github"></a>
 				<!-- Facebook logo -->
-				<a href="https://www.facebook.com/"><img src="img/5296499_fb_facebook_facebook logo_icon.svg"
+				<a href="https://www.facebook.com/mahmoud.abdelmoniem.5/" target="blank" /><img src="img/5296499_fb_facebook_facebook logo_icon.svg"
 						alt="Facebook"></a>
 				<!-- LinkedIn logo -->
-				<a href="https://www.linkedin.com/feed/"><img
+				<a href="https://linkedin.com/in/mahmoud-kassem1" target="blank" />
+				<img
 						src="img/iconfinder_1_Linkedin_unofficial_colored_svg_5296501.svg" alt="linkedin"></a>
 			</div>
 		</footer>
