--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 					&
 					customer-service background.I learnt front and back-end Technologies.I have a Bachelor in
 					Mechatronic
-					Engineering & A Full-Stack Web development Diplome.</p>
+					Engineering & A 
+					Full-Stack Web development Diplome.</p>
 				<div class="logos">
 					<a href="https://careerfoundry.com/">
 						<img src="img/cf.png" class="cf" width="80" height="80" alt="CareerFoundry">
