--- a/about.html
+++ b/about.html
@@ -60,8 +60,6 @@
         <p>Developing Code and fixing bugs gives me passion and desire to search
         the knowledge using my studies and my skills for fixing it.</p>
 
-
-
       <div class="right">
         <img src="img/IMG-20191223-WA0091.jpg" />
         <div class="germany_">
@@ -82,7 +80,10 @@
             Learn and grow in a Multiculture creative envirnoment.</p>
         </div>
       </div>
-
+      <div class="berlin">
+        <img src="img/berlin.jpg" />
+        </div>
+        
 
 
     </div>
